# kanshi

./: Cargo.toml  config_example.toml
src/: config.rs  main.rs
src/commands/: mod.rs  setup_server.rs
src/services/: fivem.rs  mod.rs
