[package]
name = "kanshi"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
serenity = { version = "0.12.2", features = ["client", "gateway"] }
tokio = { version = "1.38.0", features = ["full"] }
config = "0.14.0"
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde_json = "1.0.117"
url = "2.5.0"
